test/compilable/imports/test15925thread.d
module imports.test15925thread;

public class Thread {}
public alias ThreadAlias = Thread;
