test/fail_compilation/imports/test1161.d
module imports.test1161;

class Test
{
private:
    static int counter = 0;
}
